testdata/typechecker/error/classes/portfolio_err2.java
/**
 * Cyclic inheritance for class A
 *
 */

class A extends D {

}

class B extends A {

}

class C extends B {

}

class D extends C {

}

int main() {
  return 0;
}